# rustacean-web

./: .env  .gitignore  Cargo.toml  README.md  dev_start.sh  seed.sql
app/: index.html  package.json  webpack.config.js
app/src/: index.tsx  interfaces.d.ts
app/src/components/: About.tsx  Admin.tsx  App.tsx  Hello.tsx  Home.tsx  Post.tsx
app/src/services/: posts.ts
migrations/20170708105025_create_users/: up.sql
migrations/20170709053759_create_posts/: up.sql
src/: main.rs
src/controllers/: mod.rs  posts.rs  statics.rs  users.rs
src/db/: connection.rs  mod.rs  models.rs  schema.rs
src/services/: posts.rs  users.rs
