[package]
name = "rustacean-web"
version = "0.1.0"
authors = ["sam <sam.jeston@gmail.com>"]

[dependencies]
rocket = "0.2.8"
rocket_codegen = "0.2.8"
diesel = { version = "0.14.0", features = ["mysql"] }
diesel_codegen = { version = "0.14.0", features = ["mysql"] }
dotenv = "0.9.0"
rocket_contrib = "0.2.8"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
